k8s/00-namespace-config.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: itsm-system
  labels:
    name: itsm-system
